# jarvis

./: .gitignore  CHANGELOG.md  Cargo.toml  Commands.md  INSTRUCTION.md  README.md  setup.ps1
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/rules/: fast-path.md  git-workflow.md  plugins.md
.claude/skills/jarvis-architecture/: SKILL.md
.claude/skills/jarvis-commit-bot/: SKILL.md
.claude/skills/jarvis-doc-writer/: SKILL.md
.claude/skills/jarvis-fast-path-guardian/: SKILL.md
.claude/skills/jarvis-plugin-scaffold/: SKILL.md
.github/: CODEOWNERS  branch-protection.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/jarvis-app/: Cargo.toml  app.manifest  build.rs
crates/jarvis-app/src/: _app.rs  app.rs  fast_path.rs  log.rs  main.rs  tray.rs
crates/jarvis-app/src/tray/: menu.rs
crates/jarvis-cli/: Cargo.toml
crates/jarvis-cli/src/: main.rs
crates/jarvis-core/: Cargo.toml
crates/jarvis-core/src/: agent_registry.rs  audio.rs  (+21 more)
crates/jarvis-gui/: Cargo.toml  build.rs  tauri.conf.json
docs/: MEMORY.md  TASKS.md  architecture.md  plugin.md  roadmap.md  sdk.md
docs/plans/: 2026-03-08-github-publish.md  2026-03-08-response-sound-commands.md  2026-03-13-command-registry.md  2026-03-13-event-bus.md  2026-03-14-core-stabilization.md  2026-03-14-model-system-robustness.md  2026-03-14-task-005-fast-path-boundary.md  2026-03-14-task-006-hot-reload.md  2026-03-14-user-data-persistence.md
frontend/: package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  Events.svelte  functions.ts  main.ts  stores.ts
(+103 files in other folders)
